@@ -49,6 +49,7 @@ version <next>:
 - Auravision Aura 1 and 2 decoders
 - Deluxe Paint Animation playback system
 - SIPR decoding for modes 8k5, 6k5 and 5k0
+- Adobe Filmstrip muxer and demuxer
 
 
 
